--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "helmet": "^3.9.0",
     "nedb": "^1.8.0",
     "serve-favicon": "^2.4.5",
+    "wechat-api": "^1.35.1",
     "wechat-oauth": "^1.2.1",
     "winston": "^2.4.0"
   },
